Initial working version

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,13 @@ default_envs =
 framework = arduino
 lib_ldf_mode = deep
 monitor_speed = 115200
+upload_speed = 921600
 lib_deps =
   ; Peg the SensESP version to 2.0.0 and compatible versions
-  SignalK/SensESP @ ^2.0.0
+  ;SignalK/SensESP @ ^2.0.0
+  SignalK/SensESP
   ; Add any additional dependencies here
+  SensESP/OneWire@^2.0.0
 
 [espressif32_base]
 ;this section has config items common to all ESP32 boards
@@ -28,9 +31,9 @@ monitor_filters = esp32_exception_decoder
 
 [env:esp32dev]
 extends = espressif32_base
-board = esp32dev
-build_flags =
-  -D LED_BUILTIN=2
+board = lolin32_lite
+;build_flags =
+  ;-D LED_BUILTIN=2
   ; Uncomment the following to disable debug output altogether
   ;-D DEBUG_DISABLED
   ; Uncomment the following to enable the remote debug telnet interface on port 23
