changed the temperature metadata

--- a/platformio.ini
+++ b/platformio.ini
@@ -48,3 +48,23 @@ board = lolin32_lite
 ;upload_port = IP_ADDRESS_OF_ESP_HERE
 ;upload_flags =
 ;  --auth=YOUR_OTA_PASSWORD
+
+[env:esp32ota]
+extends = espressif32_base
+board = esp32dev
+build_flags =
+  -D LED_BUILTIN=2
+  ; Uncomment the following to disable debug output altogether
+  -D DEBUG_DISABLED
+  ; Uncomment the following to enable the remote debug telnet interface on port 23
+  ;-D REMOTE_DEBUG
+
+;; Uncomment and change these if PlatformIO can't auto-detect the ports
+;upload_port = /dev/tty.SLAB_USBtoUART
+;monitor_port = /dev/tty.SLAB_USBtoUART
+
+;; Uncomment the following lines to use Over-the-air (OTA) Updates
+upload_protocol = espota
+upload_port = 192.168.5.160
+upload_flags =
+  --auth=pangolin
