Added compiler options for lolin ESP32-S2 mini

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,7 @@ monitor_filters = esp32_exception_decoder
 
 [env:esp32dev]
 extends = espressif32_base
-board = lolin32_lite
+board = esp32dev
 ;build_flags =
   ;-D LED_BUILTIN=2
   ; Uncomment the following to disable debug output altogether
@@ -42,12 +42,6 @@ board = lolin32_lite
 ;; Uncomment and change these if PlatformIO can't auto-detect the ports
 ;upload_port = /dev/tty.SLAB_USBtoUART
 ;monitor_port = /dev/tty.SLAB_USBtoUART
-
-;; Uncomment the following lines to use Over-the-air (OTA) Updates
-;upload_protocol = espota
-;upload_port = IP_ADDRESS_OF_ESP_HERE
-;upload_flags =
-;  --auth=YOUR_OTA_PASSWORD
 
 [env:esp32ota]
 extends = espressif32_base
@@ -68,3 +62,8 @@ upload_protocol = espota
 upload_port = 192.168.5.160
 upload_flags =
   --auth=pangolin
+
+[env:lolin_s2_mini]
+extends = espressif32_base
+; platform = espressif32
+board = lolin_s2_mini
