Added S2 and S2-OTA

--- a/platformio.ini
+++ b/platformio.ini
@@ -65,5 +65,32 @@ upload_flags =
 
 [env:lolin_s2_mini]
 extends = espressif32_base
-; platform = espressif32
+platform = espressif32
 board = lolin_s2_mini
+build_flags =
+  ;-D LED_BUILTIN=15
+  ; Uncomment the following to disable debug output altogether
+  -D DEBUG_DISABLED
+  ; Uncomment the following to enable the remote debug telnet interface on port 23
+  ;-D REMOTE_DEBUG
+
+;; Uncomment and change these if PlatformIO can't auto-detect the ports
+;upload_port = /dev/tty.SLAB_USBtoUART
+;monitor_port = /dev/tty.SLAB_USBtoUART
+
+[env:lolin_s2_mini_ota]
+extends = espressif32_base
+platform = espressif32
+board = lolin_s2_mini
+build_flags =
+  ;-D LED_BUILTIN=15
+  ; Uncomment the following to disable debug output altogether
+  -D DEBUG_DISABLED
+  ; Uncomment the following to enable the remote debug telnet interface on port 23
+  ;-D REMOTE_DEBUG
+  
+;; Uncomment the following lines to use Over-the-air (OTA) Updates
+upload_protocol = espota
+upload_port = 192.168.5.101
+upload_flags =
+  --auth=pangolin
