Changed to update sensESP

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,8 @@ monitor_speed = 115200
 upload_speed = 921600
 lib_deps =
   ; Peg the SensESP version to 2.0.0 and compatible versions
-  ;SignalK/SensESP @ ^2.0.0
-  SignalK/SensESP
+  SignalK/SensESP @ ^2.0.0
+  ;SignalK/SensESP
   ; Add any additional dependencies here
   SensESP/OneWire@^2.0.0
 
